--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -5,12 +5,12 @@
   <legend>Sign In with your UCLA Logon ID</legend>
 
   <fieldset class="fieldset">
-		<label for="logon">Account ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long" >
+		<label for="logon">Your UCLA Logon ID</label>
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long, consisting of only lowercase english alphabet letters and numbers" >
   </fieldset>
 
   <fieldset class="fieldset">
-		<label for="pass">Password</label>
+		<label for="pass">Your UCLA Logon Password</label>
 		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern=".{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
 	</fieldset>
 
